crates/oxc_angular_compiler/tests/snapshots/partial_ng_module_test__empty_module_emits_only_type.snap
---
source: crates/oxc_angular_compiler/tests/partial_ng_module_test.rs
expression: js
---
i0.ɵɵngDeclareNgModule({minVersion:"14.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:EmptyModule})
