crates/oxc_angular_compiler/tests/snapshots/partial_ng_module_test__injector_with_providers_only.snap
---
source: crates/oxc_angular_compiler/tests/partial_ng_module_test.rs
expression: js
---
i0.ɵɵngDeclareInjector({minVersion:"12.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:MyModule,providers:MY_PROVIDERS})
