crates/oxc_angular_compiler/tests/snapshots/partial_ng_module_test__module_with_declarations_and_imports.snap
---
source: crates/oxc_angular_compiler/tests/partial_ng_module_test.rs
expression: js
---
i0.ɵɵngDeclareNgModule({minVersion:"14.0.0",version:"0.0.0-PLACEHOLDER",ngImport:i0,
    type:FeatureModule,declarations:[MyComp,MyDir],imports:[CommonModule]})
